# deepspeech2

./: README.md  pyproject.toml
deepspeech2/: data.py  model.py  train.py
tests/: test_data.py  test_deepspeech2.py
