[tool.poetry]
name = "deepspeech2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchaudio = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
